<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cofigurar_equipo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.itesm.m6_srb_ejer_futbol.ConfigurarEquipoActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/titulo_equipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTituloApp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/edNombreEquipo"
        android:hint="@string/nombre_equipo"
        tools:text="@string/nombre_equipo"/>

    <EditText
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/edEntrenador"
        android:hint="@string/director_tecnico"
        tools:text="@string/director_tecnico"/>

    <TextView
        android:layout_marginTop="25dp"
        android:text="@string/liga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textLbLiga"
        android:textSize="18sp" />

    <Spinner
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_liga"
        android:entries="@array/ligas_futbol"
        android:prompt="@string/ligas_prompt"/>

    <Button
        android:layout_marginTop="95dp"
        android:text="@string/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_guargar_equipo" />

</LinearLayout>
